// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image object constructs properly 1`] = `
Image {
  "meta": undefined,
  "path": undefined,
}
`;

exports[`Image object constructs properly 2`] = `
Image {
  "meta": undefined,
  "path": "https://picsum.photos/505/295?image=1024",
}
`;

exports[`Image object constructs properly 3`] = `
Image {
  "meta": undefined,
  "path": "https://www.example.com/api/storage/uploads/2018/04/26/5ae258ff2ac8d295.jpg",
}
`;

exports[`Image object constructs properly 4`] = `
Image {
  "meta": Object {
    "asset": "5ae57e29dc5c7doc1474185002",
    "title": "",
  },
  "path": "https://www.example.com/api/storage/uploads/2018/04/29/5ae57e29cc7981035.jpg",
}
`;
